--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,9 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">32dp</dimen>
+
     <dimen name="component_default_spacing">8dp</dimen>
     <dimen name="component_default_spacing_large">16dp</dimen>
+
+    <dimen name="elevation_card">4dp</dimen>
 </resources>
