--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="component_default_spacing_large">16dp</dimen>
 
     <dimen name="elevation_card">4dp</dimen>
+
+    <dimen name="image_size">64dp</dimen>
 </resources>
